исправлена ссылка на сброс пароля

--- a/yatube/templates/users/login.html
+++ b/yatube/templates/users/login.html
@@ -60,10 +60,9 @@
               Войти
             </button>
             <!-- Тест на внимательность. Без переопределения шаблона этого адреса
-            не существует. Нужно что-то делать, иначе все упадет 
-            <a href="{% url 'users:password_reset_form' %}" class="btn btn-link">
-              Забыли пароль?
-            </a> -->
+            не существует. Нужно что-то делать, иначе все упадет -->
+              <!-- Забыли пароль? -->
+            </a> 
           </div>
           </form>
         </div> <!-- card body -->
@@ -71,3 +70,6 @@
     </div> <!-- col -->
 </div> <!-- row -->
 {% endblock %}
+
+
+<!-- <a href="{% url 'users:password_reset_form' %}" class="btn btn-link"> -->
